response-message set

--- a/index.html
+++ b/index.html
@@ -987,6 +987,7 @@
 <div class="right wow fadeInRight" data-wow-duration="1s">
   <div class="fields">
     <form action="/" method="post" class="contact_form" id="contact_form" autocomplete="on">
+      <div class="response-message"></div>
       <div class="returnmessage" data-success="Your message has been received, We will contact you soon."></div>
       <div class="empty_notice"><span>Please Fill Required Fields</span></div>
       <div class="input_list">
@@ -999,9 +1000,13 @@
       <div class="message_area">
         <textarea id="message" placeholder="Your message here"></textarea>
       </div>
-      <div class="aali_tm_button">
+
+      <!-- <div class="aali_tm_button">
         <a id="send_message" href="#"><span>Submit Message <img class="svg" src="PixelCraft-Studio/img/svg/send.svg" alt=""></span></a>
-      </div>
+      </div> -->
+      <button type="submit">Submit Message</button>
+
+
     </form>
   </div>
 </div>
@@ -1063,11 +1068,11 @@
 </div>
 
 
+<script src="PixelCraft-Studio/js/email.js"></script>
 <script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="PixelCraft-Studio/js/jquery.js"></script>
 <!--[if lt IE 10]> <script type="text/javascript" src="js/ie8.js"></script> <![endif]-->
 <script src="PixelCraft-Studio/js/plugins.js"></script>
 <script src="PixelCraft-Studio/js/init.js"></script>
-<script src="PixelCraft-Studio/js/email.js"></script>
 
 </body>
 </html>
